--- a/templates/pages/index2.mustache
+++ b/templates/pages/index2.mustache
@@ -1,47 +1,51 @@
-<header>
-   <div class="page-header">
-      <h1>BootMetro</h1>
-      <h2>Metro style web framework</h2>
-   </div>
+<!-- Header
+================================================== -->
+<header id="nav-bar" class="container">
+   <h1>BootMetro</h1>
+   <h2>Metro style web framework</h2>
 </header>
+
 <div id="hero" class="">
 
    <div class="jumbotron masthead">
-      <div class="container-fluid">
+      <div class="container-fluid metro-responsive-tiles">
+
          <div class="row-fluid">
-            <div class="inner span7">
-               <h1>BootMetro</h1>
-               <h2>Metro style web framework</h2>
-               <p>Simple and flexible HTML, CSS, and Javascript for web apps that wants to use the "Windows 8 App Store" style, without the need to run on Windows 8.</p>
-               <p>
-                  <a class="btn btn-large btn-primary" href="https://github.com/aozora/bootmetro/zipball/master">
-                     Download Now
-                     <i class="icon-arrow-right-7"></i>
-                  </a>
-                  <span class="muted">it's free</span>
-                  <br/>
-                  <span class="label label-success">Latest version: 1.0 pre-beta</span>
-               </p>
+            <div class="span4">
+               <a class="tile wide imagetext bg-color-orange first" href="#">
+                  <div class="image-wrapper">
+                     <span class="icon icon-github"></span>
+                  </div>
+                  <div class="column-text">
+                     <div class="text-header2">Tile 1</div>
+                     <div class="text4">
+                     </div>
+                  </div>
+               </a>
             </div>
-            <div class="span5">
-               <img id="hero-image" class="pull-right" width="500" height="265" src="content/img/hero4.png" alt="hero">
-               <!--<div id="myFlipView" class="carousel flipview slide">-->
-                  <!--<div class="carousel-inner">-->
-                     <!--<div class="item active">-->
-                        <!--<img src="content/img/bootstrap-mdo-sfmoma-01.jpg" alt="">-->
-                     <!--</div>-->
-                     <!--<div class="item">-->
-                        <!--<img src="content/img/bootstrap-mdo-sfmoma-02.jpg" alt="">-->
-                     <!--</div>-->
-                     <!--<div class="item">-->
-                        <!--<img src="content/img/bootstrap-mdo-sfmoma-03.jpg" alt="">-->
-                     <!--</div>-->
-                  <!--</div>-->
-                  <!--<a class="left carousel-control" href="#myFlipView" data-slide="prev">&#xe0f4;</a>-->
-                  <!--<a class="right carousel-control" href="#myFlipView" data-slide="next">&#xe0f1;</a>-->
-               <!--</div>-->
+            <div class="span4">
+               <a class="tile wide imagetext bg-color-green middle" href="#">
+                  <div class="image-wrapper">
+                     <span class="icon icon-grid"></span>
+                  </div>
+                  <div class="column-text">
+                     <div class="text-header3">Tile 2</div>
+                  </div>
+               </a>
+            </div>
+            <div class="span4">
+               <a class="tile wide imagetext bg-color-blue last" href="#">
+                  <div class="image-wrapper">
+                     <span class="icon icon-twitter"></span>
+                  </div>
+                  <div class="column-text">
+                     <div class="text-header3">Tile 3</div>
+                  </div>
+               </a>
             </div>
          </div>
+
+
       </div>
    </div>
 
