--- a/content/css/demo.css
+++ b/content/css/demo.css
@@ -68,11 +68,11 @@ hr.soften {
 ------------------------- */
 .jumbotron {
    position: relative;
-   /*padding: 40px 0;*/
-   /*color: #fff;*/
+   padding: 40px 0;
+   color: #fff;
    /*text-align: center;*/
    /*text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);*/
-   /*background: #020031; *//* Old browsers */
+   background: #287EB7;
    /*background: -moz-linear-gradient(45deg,  #020031 0%, #6d3353 100%); *//* FF3.6+ */
    /*background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%,#6d3353)); *//* Chrome,Safari4+ */
    /*background: -webkit-linear-gradient(45deg,  #020031 0%,#6d3353 100%); *//* Chrome10+,Safari5.1+ */
@@ -126,9 +126,9 @@ hr.soften {
    font-weight: 400;
    color: #fff; /* redeclare to override the `.jumbotron a` */
    border: 0;
-   -webkit-border-radius: 0;
-      -moz-border-radius: 0;
-           border-radius: 0;
+   /*-webkit-border-radius: 0;*/
+      /*-moz-border-radius: 0;*/
+           /*border-radius: 0;*/
    -webkit-transition: none;
    -moz-transition: none;
    transition: none;
