--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -6587,7 +6587,7 @@ Back button.
   font-size: 24px;
   font-weight: normal;
   vertical-align: 24%;
-  content: "\e43a";
+  content: "\e41c";
 }
 
 .win-backbutton:disabled,
