--- a/templates/partials/logged-user.mustache
+++ b/templates/partials/logged-user.mustache
@@ -1,6 +1,6 @@
 <div id="top-info" class="pull-right">
    <a id="settings" href="#" class="win-command pull-right">
-      <span class="win-commandicon win-commandring icon-cog"></span>
+      <span class="win-commandicon win-commandring icon-cog-3"></span>
    </a>
    <a id="logged-user" href="#" class="win-command pull-right">
       <span class="win-commandicon win-commandring icon-user"></span>
