--- a/content/css/demo.css
+++ b/content/css/demo.css
@@ -12,7 +12,7 @@
 html,
 body {
    position: relative;
-   background: transparent url(../img/bkg-1.jpg) repeat 0 0;
+   background: transparent url(../img/bkg-4.png) repeat 0 0;
    /*background-color: #f2f0e4;*/
    color: #847d6b;
    /*padding-top: 40px;*/
