--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -12,7 +12,7 @@
 
    <title>{{title}}</title>
 
-   {{& robots}}
+   <meta name="robots" content="index, nofollow">
    <meta name="description" content="BootMetro : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
    <meta name="keywords" content="bootmetro, modern ui, modern-ui, metro, metroui, metro-ui, metro ui, windows 8, metro style, bootstrap, framework, web framework, css, html" />
    <meta name="author" content="AozoraLabs by Marcello Palmitessa"/>
@@ -27,7 +27,7 @@
    <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
 
    <!--  these two css are to use only for documentation -->
-   <link rel="stylesheet" type="text/css" href="content/css/demo.css">
+   <link rel="stylesheet" type="text/css" href="content/css/docs.css">
    <link rel="stylesheet" type="text/css" href="scripts/google-code-prettify/prettify.css" >
 
    <!-- Le fav and touch icons -->
