--- a/templates/pages/_layout.mustache
+++ b/templates/pages/_layout.mustache
@@ -12,7 +12,7 @@
 
    <title>{{title}}</title>
 
-   {{& robots}}
+   <meta name="robots" content="index, nofollow">
    <meta name="description" content="BootMetro : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
    <meta name="keywords" content="bootmetro, modern ui, modern-ui, metro, metroui, metro-ui, metro ui, windows 8, metro style, bootstrap, framework, web framework, css, html" />
    <meta name="author" content="AozoraLabs by Marcello Palmitessa"/>
