--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -20,27 +20,27 @@
    <!-- remove or comment this line if you want to use the local fonts -->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-responsive.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-ui-light.css">
-   <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/bootmetro.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-responsive.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-icons.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-ui-light.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/datepicker.css">
 
    <!--  these two css are to use only for documentation -->
-   <link rel="stylesheet" type="text/css" href="content/css/docs.css">
-   <link rel="stylesheet" type="text/css" href="scripts/google-code-prettify/prettify.css" >
+   <link rel="stylesheet" type="text/css" href="../content/css/docs.css">
+   <link rel="stylesheet" type="text/css" href="../scripts/google-code-prettify/prettify.css" >
 
    <!-- Le fav and touch icons -->
-   <link rel="shortcut icon" href="content/ico/favicon.ico">
-   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="content/ico/apple-touch-icon-144-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="content/ico/apple-touch-icon-114-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="content/ico/apple-touch-icon-72-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" href="content/ico/apple-touch-icon-57-precomposed.png">
+   <link rel="shortcut icon" href="../content/ico/favicon.ico">
+   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../content/ico/apple-touch-icon-144-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../content/ico/apple-touch-icon-114-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../content/ico/apple-touch-icon-72-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" href="../content/ico/apple-touch-icon-57-precomposed.png">
   
    <!-- All JavaScript at the bottom, except for Modernizr and Respond.
       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-   <script src="scripts/modernizr-2.6.2.min.js"></script>
+   <script src="../scripts/modernizr-2.6.2.min.js"></script>
 
    <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -54,7 +54,7 @@
    </script>
 </head>
 
-<body class="bs-docs-docs">
+<body class="bs-docs-docs" data-target=".bs-docs-sidebar" data-spy="scroll">
 
    <!--[if lt IE 7]>
    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
@@ -70,35 +70,27 @@
 
    <footer class="bs-docs-footer">
      <div class="container">
-
-       <p>Designed and built with all the love in the world by <a target="_blank" href="http://twitter.com/mdo">@mdo</a> and <a target="_blank" href="http://twitter.com/fat">@fat</a>.</p>
+       <p>Designed and built by <a target="_blank" href="https://twitter.com/aozoralabs">@aozoralabs</a>.</p>
        <p>Code licensed under <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-       <p><a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-       <ul class="footer-links">
-         <li><a href="http://blog.getbootstrap.com">Blog</a></li>
-         <li class="muted">·</li>
-         <li><a href="https://github.com/twitter/bootstrap/issues?state=open">Issues</a></li>
-         <li class="muted">·</li>
-         <li><a href="https://github.com/twitter/bootstrap/blob/master/CHANGELOG.md">Changelog</a></li>
-       </ul>
      </div>
    </footer>
 
 
    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-   <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
+   <script>window.jQuery || document.write("<script src='../scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
    <!--[if IE 7]>
    <script type="text/javascript" src="scripts/bootmetro-icons-ie7.js">
    <![endif]-->
 
-   <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
-   <script type="text/javascript" src="scripts/holder.js"></script>
+   <script type="text/javascript" src="../scripts/google-code-prettify/prettify.js"></script>
+   <script type="text/javascript" src="../scripts/bootstrap.min.js"></script>
+   <script type="text/javascript" src="../scripts/bootmetro-panorama.js"></script>
+   <script type="text/javascript" src="../scripts/bootmetro-pivot.js"></script>
+   <script type="text/javascript" src="../scripts/bootmetro-charms.js"></script>
+   <script type="text/javascript" src="../scripts/bootstrap-datepicker.js"></script>
+   <script type="text/javascript" src="../scripts/holder.js"></script>
+   <script type="text/javascript" src="../scripts/docs.js"></script>
 </body>
 </html>
