--- a/templates/partials/docs-sidebar.mustache
+++ b/templates/partials/docs-sidebar.mustache
@@ -12,14 +12,13 @@
     <li class=""><a href="#css" class="nav-header">CSS</a></li>
     <li class=""><a href="#css-overview">Overview</a></li>
     <li>
-      <a href="#grid">Grid system</a>
+      <a href="#scaffolding">Scaffolding</a>
       <ul class="nav">
-        <li><a href="#grid-example">Example usage</a></li>
-        <li><a href="#grid-offsetting">Offset columns</a></li>
-        <li><a href="#grid-nesting">Nested columns</a></li>
-        <li><a href="#grid-column-ordering">Column ordering</a></li>
-        <li><a href="#grid-small">Small device grid</a></li>
-        <li><a href="#grid-less">LESS mixins and variables</a></li>
+          <li><a href="#scaffolding-global">Global styles</a></li>
+          <li><a href="#scaffolding-gridSystem">Grid system</a></li>
+          <li><a href="#scaffolding-fluidGridSystem">Fluid grid system</a></li>
+          <li><a href="#scaffolding-layouts">Layouts</a></li>
+          <li><a href="#scaffolding-responsive">Responsive design</a></li>
       </ul>
     </li>
     <li>
