--- a/templates/pages/about.mustache
+++ b/templates/pages/about.mustache
@@ -4,15 +4,11 @@
    <div class="row">
       <div class="span12">
          <div id="header-container">
-            <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
+            <a id="backbutton" class="win-backbutton" href="./index.html"></a>
             <h5>{{appname}}</h5>
-            <div class="dropdown">
-               <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                  {{_i}}About &amp; Credits{{/i}}
-                  <b class="caret"></b>
-               </a>
-               {{>headermenu}}
-            </div>
+            <a class="header-dropdown accent-color" href="#" >
+               {{_i}}About &amp; Credits{{/i}}
+            </a>
          </div>
       </div>
    </div>
@@ -23,7 +19,7 @@
       <div class="span12">
 
          <h1>About <small></small></h1>
-         <p>
+         <p class="lead">
             Early in 2012, when Microsoft released the first beta of Windows 8 I finally had the opportunity to try the "Metro UI" (now renamed to... Windows 8 App Store style).
             At that time the UI guidelines was almost done, and also the "direction" set by microsoft was clear. I looked for other references of Metro style around the web, and there was nothing or little info apart the official one.
             <br/>
@@ -35,12 +31,12 @@
          </p>
 
          <h2>Author</h2>
-         <p>
+         <p class="lead">
             I'm <a href="http://www.marcellop.com/">Marcello Palmitessa</a>, an italian developer, curious designer, and tech geek.
          </p>
 
          <h2>Contributors <small></small></h2>
-         <p>
+         <p class="lead">
             I wish to thank Alexander Finger &amp; David Smith for their support and all the githubbers who keep me on the road to improve the project.
          </p>
 
