--- a/templates/pages/index2.mustache
+++ b/templates/pages/index2.mustache
@@ -9,7 +9,7 @@
 <div id="header-nav" class="container">
    <ul class="nav nav-links">
       <li>
-         <a href="#">Demo</a>
+         <a href="./demo/hub.html">Demo</a>
       </li>
       <li>
          <a href="#">documentation</a>
@@ -18,7 +18,7 @@
          <a href="#">downloads</a>
       </li>
       <li>
-         <a href="#">about</a>
+         <a href="./about.html">about</a>
       </li>
    </ul>
 </div>
