--- a/templates/partials/docs-sidebar.mustache
+++ b/templates/partials/docs-sidebar.mustache
@@ -75,7 +75,7 @@
 
     <!-- Components -->
     <li><a href="#components" class="nav-header">Components</a></li>
-    <li><a href="#icons">Glyphicons</a></li>
+    <li><a href="#icons">Icons</a></li>
     <li>
       <a href="#dropdowns">Dropdowns</a>
       <ul class="nav">
