--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -4,7 +4,7 @@
    <div class="row">
       <div class="span12">
          <div id="header-container">
-            <a id="backbutton" class="win-backbutton" href="./index.html"></a>
+            <a id="backbutton" class="win-backbutton" href="../index.html"></a>
             <h5>{{appname}}</h5>
             <div class="dropdown">
                <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#">
