--- a/templates/docs/icons.mustache
+++ b/templates/docs/icons.mustache
@@ -1,39 +1,15 @@
-<!-- Header
-================================================== -->
-<header id="nav-bar" class="container">
-   <div class="row">
-      <div class="span12">
-         <div id="header-container">
-            <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
-            <h5>{{appname}}</h5>
-            <div class="dropdown">
-               <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#">
-                  {{_i}}Icons by IcoMoon{{/i}}
-                  <b class="caret"></b>
-               </a>
-               {{>headermenu}}
-            </div>
-         </div>
-         <div id="top-info" class="pull-right">
-            <a id="settings" href="#" class="win-command pull-right">
-               <span class="win-commandicon win-commandring icon-settings"></span>
-            </a>
-         </div>
-      </div>
-   </div>
-</header>
 
-<div class="container">
-   <div class="row">
-      <div class="span12">
+
+<div id="icons" class="bs-docs-section">
+
 
          <div id="icomoon-container" class="w-main centered">
             <p><span class="label label-important">Important!</span> Please remember to edit the file <em>bootmetro-icons.css</em> or <em>bootmetro-icons.less</em> to change the icomoon font files path according to your project structure.</p>
 
-            <section class="mtm clearfix" id="css-class-names">
-               <header>
-                  <h2>CSS Class Names</h2>
-               </header>
+<section class="mtm clearfix" id="css-class-names">
+   <header>
+      <h2>CSS Class Names</h2>
+   </header>
 
 	<span class="box1">
 		<span aria-hidden="true" class="icon-battery-low"></span>
@@ -4662,6 +4638,4 @@
          </div>
 
       </div>
-   </div>
-</div>
 
