--- a/templates/docs/listviews.mustache
+++ b/templates/docs/listviews.mustache
@@ -1,31 +1,5 @@
-<!-- Header
-================================================== -->
-<header id="nav-bar" class="container">
-   <div class="row">
-      <div class="span12">
-         <div id="header-container">
-            <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
-            <h5>{{appname}}</h5>
-            <div class="dropdown">
-               <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                  {{_i}}ListViews{{/i}}
-                  <b class="caret"></b>
-               </a>
-               {{>headermenu}}
-            </div>
-         </div>
-         <div id="top-info" class="pull-right">
-            <a id="settings" class="pull-right" href="#">
-               <b class="icon-settings"></b>
-            </a>
-         </div>
-      </div>
-   </div>
-</header>
 
-<div class="container">
-   <div class="row">
-      <div class="metro span12">
+      <div class="metro ">
 
          <header>
             <h2>Grid Layout</h2>
@@ -115,5 +89,3 @@ $('#listview-grid-demo').on('click', '.mediumListIconTextItem', function(e){
 
 
       </div>
-   </div>
-</div>
