--- a/templates/docs/toast.mustache
+++ b/templates/docs/toast.mustache
@@ -1,48 +1,15 @@
-<!-- Subhead
-================================================== -->
-<header id="nav-bar" class="container">
-   <div class="row">
-      <div class="span12">
-         <div id="header-container">
-            <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
-            <h5>{{appname}}</h5>
-            <div class="dropdown">
-               <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                  {{_i}}Toast Notifications{{/i}}
-                  <b class="caret"></b>
-               </a>
-               {{>headermenu}}
-            </div>
-         </div>
-         <div id="top-info" class="pull-right">
-            <a id="settings" href="#" class="win-command pull-right">
-               <span class="win-commandicon win-commandring icon-settings"></span>
-            </a>
-         </div>
-      </div>
-   </div>
-</header>
-<div class="container">
+
+         <!--<ul class="nav nav-list bs-docs-sidenav">-->
+            <!--<li><a href="#textonly"><i class="icon-chevron-right"></i> {{_i}}Text Only Templates{{/i}}</a></li>-->
+            <!--<li><a href="#imagetext"><i class="icon-chevron-right"></i> {{_i}}Image &amp; Text Templates{{/i}}</a></li>-->
+         <!--</ul>-->
+
+
    <blockquote>
       A toast notification is a transient message to the user that contains relevant, time-sensitive information and provides quick access to related content in an app.
       <small>Toast notification overview (Windows Store apps)</small>
    </blockquote>
    <p>Following there are all the possible templates and styles for different kind of toast notifications.</p>
-</div>
-
-<div class="container">
-
-   <!-- Docs nav
-   ================================================== -->
-   <div class="row">
-      <div class="span3 bs-docs-sidebar">
-         <ul class="nav nav-list bs-docs-sidenav">
-            <li><a href="#textonly"><i class="icon-chevron-right"></i> {{_i}}Text Only Templates{{/i}}</a></li>
-            <li><a href="#imagetext"><i class="icon-chevron-right"></i> {{_i}}Image &amp; Text Templates{{/i}}</a></li>
-         </ul>
-      </div>
-      <div class="span9">
-
 
          <!-- Text Only Templates
          ================================================== -->
@@ -129,6 +96,3 @@
 
          </section>
 
-      </div>
-   </div>
-</div>
