--- a/templates/partials/docs-sidebar.mustache
+++ b/templates/partials/docs-sidebar.mustache
@@ -22,16 +22,15 @@
       </ul>
     </li>
     <li>
-      <a href="#type">Typography</a>
+      <a href="#typography">Typography</a>
       <ul class="nav">
-        <li><a href="#type-headings">Headings</a></li>
-        <li><a href="#type-body-copy">Body copy</a></li>
-        <li><a href="#type-emphasis">Emphasis</a></li>
-        <li><a href="#type-abbreviations">Abbreviations</a></li>
-        <li><a href="#type-addresses">Addresses</a></li>
-        <li><a href="#type-blockquotes">Blockquotes</a></li>
-        <li><a href="#type-lists">Lists</a></li>
-        <li><a href="#type-"></a></li>
+        <li><a href="#typography-headings">Headings</a></li>
+        <li><a href="#typography-body-copy">Body copy</a></li>
+        <li><a href="#typography-emphasis">Emphasis</a></li>
+        <li><a href="#typography-abbreviations">Abbreviations</a></li>
+        <li><a href="#typography-addresses">Addresses</a></li>
+        <li><a href="#typography-blockquotes">Blockquotes</a></li>
+        <li><a href="#typography-lists">Lists</a></li>
       </ul>
     </li>
     <li><a href="#code">Code</a></li>
@@ -198,24 +197,36 @@
         <li><a href="#js-events">Evens</a></li>
       </ul>
     </li>
-    <li><a href="#transitions">Transitions</a></li>
+    <li><a href="#js-transitions">Transitions</a></li>
     <li>
-      <a href="#modals">Modal</a>
+      <a href="#js-modals">Modal</a>
       <ul class="nav">
         <li><a href="#modals-examples">Examples</a></li>
         <li><a href="#modals-usage">Usage</a></li>
       </ul>
     </li>
-    <li><a href="#dropdowns">Dropdown</a></li>
-    <li><a href="#scrollspy">Scrollspy</a></li>
-    <li><a href="#tabs">Tab</a></li>
-    <li><a href="#tooltips">Tooltip</a></li>
-    <li><a href="#popovers">Popover</a></li>
+    <li><a href="#js-dropdowns">Dropdown</a></li>
+    <li><a href="#js-scrollspy">Scrollspy</a></li>
+    <li><a href="#js-tabs">Tab</a></li>
+    <li><a href="#js-tooltips">Tooltip</a></li>
+    <li><a href="#js-popovers">Popover</a></li>
     <li><a href="#js-alerts">Alert</a></li>
     <li><a href="#js-buttons">Button</a></li>
-    <li><a href="#collapse">Collapse</a></li>
-    <li><a href="#carousel">Carousel</a></li>
-    <li><a href="#typeahead">Typeahead</a></li>
-    <li><a href="#affix">Affix</a></li>
+    <li><a href="#js-collapse">Collapse</a></li>
+    <li><a href="#js-carousel">Carousel</a></li>
+    <li><a href="#js-typeahead">Typeahead</a></li>
+    <li><a href="#js-affix">Affix</a></li>
+
+   <li>
+      <a href="#metro-commands">Command Buttons</a>
+      <ul class="nav">
+         <li><a href="#metro-progress">Metro Progress Bars</a></li>
+         <li><a href="#metro-modals">Modal</a></li>
+         <li><a href="#metro-datepicker">DatePicker</a></li>
+         <li><a href="#metro-flipview">FlipView</a></li>
+      </ul>
+   </li>
+
+
   </ul>
 </div>
