--- a/templates/docs/welcome.mustache
+++ b/templates/docs/welcome.mustache
@@ -1,6 +1,6 @@
 <div class="bs-docs-section-header" id="welcome">
    <h1>Welcome</h1>
-   <p class="lead">Welcome to the BootMetro documentation.</p>
+   <p class="lead">BootMetro documentation.</p>
 </div>
 
 <div id="getting-started" class="bs-docs-section">
